# writ

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COMPILERS.md  INTERVIEW_TAXONOMY.md
examples/: basic_usage.py  custom_compiler.py  mcp_client.py
src/writ_agents/: __init__.py
src/writ_agents/cli/: __init__.py  __main__.py  app.py  commands.py  config.py  styles.tcss
src/writ_agents/cli/screens/: __init__.py  interview.py  reveal.py
src/writ_agents/cli/widgets/: __init__.py  chat_panel.py  confidence_bar.py  connector_list.py  spec_card.py
src/writ_agents/compilers/: __init__.py  agents_md.py  base.py  claude.py  gemini.py  oas.py  openai.py
src/writ_agents/core/: __init__.py  confidence.py  interview.py  json_extract.py  merge.py  prompt.py  schema.py  session.py  step.py
src/writ_agents/mcp/: __init__.py  server.py  store.py
src/writ_agents/providers/: __init__.py  anthropic.py  base.py
src/writ_agents/resolver/: __init__.py  catalog.py  prompt.py  resolver.py
tests/: __init__.py  conftest.py  test_mcp_server.py  test_mcp_stdio.py
tests/cli/: test_config.py  test_tui_pilot.py
tests/compilers/: test_agents_md.py  test_claude.py  test_gemini.py  test_oas.py  test_openai.py
tests/core/: test_confidence.py  test_interview.py  test_json_extract.py  test_merge.py  test_schema.py  test_session_store.py  test_step.py
tests/fixtures/conversations/: triage_agent.json
tests/resolver/: test_resolver.py
