[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writ-agents"
version = "0.2.0"
description = "Translate plain business-language descriptions into portable AI agent specifications"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "mcp>=1.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "textual>=0.80.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pre-commit>=3.8.0",
    "types-pyyaml>=6.0.0",
]

[project.scripts]
writ = "writ_agents.cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/writ_agents"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "TC001", "TC002", "TC003"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
